--- a/Data/DVF.ipynb
+++ b/Data/DVF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2741eadc",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "bfa58aa0",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
        "[4375223 rows x 43 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "491f9992",
    "metadata": {},
    "outputs": [
@@ -617,7 +617,7 @@
        "[4375223 rows x 7 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +629,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
+   "id": "3bececf8-5312-4de7-a420-827f3a81780f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df2.applymap(lambda x: x.replace(',', '.') if isinstance(x, str) else x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "e89adab4",
    "metadata": {},
    "outputs": [
@@ -667,7 +677,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Vente</td>\n",
-       "      <td>185000,00</td>\n",
+       "      <td>185000.0</td>\n",
        "      <td>1370</td>\n",
        "      <td>VAL-REVERMONT</td>\n",
        "      <td>1</td>\n",
@@ -677,7 +687,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Vente</td>\n",
-       "      <td>185000,00</td>\n",
+       "      <td>185000.0</td>\n",
        "      <td>1370</td>\n",
        "      <td>VAL-REVERMONT</td>\n",
        "      <td>3</td>\n",
@@ -687,7 +697,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Vente</td>\n",
-       "      <td>204332,00</td>\n",
+       "      <td>204332.0</td>\n",
        "      <td>1310</td>\n",
        "      <td>BUELLAS</td>\n",
        "      <td>1</td>\n",
@@ -697,7 +707,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Vente</td>\n",
-       "      <td>320000,00</td>\n",
+       "      <td>320000.0</td>\n",
        "      <td>1250</td>\n",
        "      <td>MONTAGNAT</td>\n",
        "      <td>3</td>\n",
@@ -707,7 +717,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Vente</td>\n",
-       "      <td>320000,00</td>\n",
+       "      <td>320000.0</td>\n",
        "      <td>1250</td>\n",
        "      <td>MONTAGNAT</td>\n",
        "      <td>1</td>\n",
@@ -727,7 +737,7 @@
        "    <tr>\n",
        "      <th>4375192</th>\n",
        "      <td>Vente</td>\n",
-       "      <td>2000000,00</td>\n",
+       "      <td>2000000.0</td>\n",
        "      <td>75002</td>\n",
        "      <td>PARIS 02</td>\n",
        "      <td>2</td>\n",
@@ -737,7 +747,7 @@
        "    <tr>\n",
        "      <th>4375193</th>\n",
        "      <td>Vente</td>\n",
-       "      <td>2000000,00</td>\n",
+       "      <td>2000000.0</td>\n",
        "      <td>75002</td>\n",
        "      <td>PARIS 02</td>\n",
        "      <td>2</td>\n",
@@ -747,7 +757,7 @@
        "    <tr>\n",
        "      <th>4375194</th>\n",
        "      <td>Vente</td>\n",
-       "      <td>2000000,00</td>\n",
+       "      <td>2000000.0</td>\n",
        "      <td>75002</td>\n",
        "      <td>PARIS 02</td>\n",
        "      <td>2</td>\n",
@@ -757,7 +767,7 @@
        "    <tr>\n",
        "      <th>4375195</th>\n",
        "      <td>Vente</td>\n",
-       "      <td>2000000,00</td>\n",
+       "      <td>2000000.0</td>\n",
        "      <td>75002</td>\n",
        "      <td>PARIS 02</td>\n",
        "      <td>2</td>\n",
@@ -767,7 +777,7 @@
        "    <tr>\n",
        "      <th>4375196</th>\n",
        "      <td>Vente</td>\n",
-       "      <td>2000000,00</td>\n",
+       "      <td>2000000.0</td>\n",
        "      <td>75002</td>\n",
        "      <td>PARIS 02</td>\n",
        "      <td>2</td>\n",
@@ -780,48 +790,49 @@
        "</div>"
       ],
       "text/plain": [
-       "        Nature mutation Valeur fonciere  Code postal        Commune  \\\n",
-       "0                 Vente       185000,00         1370  VAL-REVERMONT   \n",
-       "1                 Vente       185000,00         1370  VAL-REVERMONT   \n",
-       "3                 Vente       204332,00         1310        BUELLAS   \n",
-       "4                 Vente       320000,00         1250      MONTAGNAT   \n",
-       "5                 Vente       320000,00         1250      MONTAGNAT   \n",
-       "...                 ...             ...          ...            ...   \n",
-       "4375192           Vente      2000000,00        75002       PARIS 02   \n",
-       "4375193           Vente      2000000,00        75002       PARIS 02   \n",
-       "4375194           Vente      2000000,00        75002       PARIS 02   \n",
-       "4375195           Vente      2000000,00        75002       PARIS 02   \n",
-       "4375196           Vente      2000000,00        75002       PARIS 02   \n",
+       "        Nature mutation  Valeur fonciere Code postal        Commune  \\\n",
+       "0                 Vente         185000.0        1370  VAL-REVERMONT   \n",
+       "1                 Vente         185000.0        1370  VAL-REVERMONT   \n",
+       "3                 Vente         204332.0        1310        BUELLAS   \n",
+       "4                 Vente         320000.0        1250      MONTAGNAT   \n",
+       "5                 Vente         320000.0        1250      MONTAGNAT   \n",
+       "...                 ...              ...         ...            ...   \n",
+       "4375192           Vente        2000000.0       75002       PARIS 02   \n",
+       "4375193           Vente        2000000.0       75002       PARIS 02   \n",
+       "4375194           Vente        2000000.0       75002       PARIS 02   \n",
+       "4375195           Vente        2000000.0       75002       PARIS 02   \n",
+       "4375196           Vente        2000000.0       75002       PARIS 02   \n",
        "\n",
-       "         Code type local  Surface reelle bati  Surface terrain  \n",
-       "0                      1                 97.0           2410.0  \n",
-       "1                      3                  0.0           2410.0  \n",
-       "3                      1                 88.0            866.0  \n",
-       "4                      3                  0.0           1426.0  \n",
-       "5                      1                168.0           1426.0  \n",
-       "...                  ...                  ...              ...  \n",
-       "4375192                2                 39.0             77.0  \n",
-       "4375193                2                 39.0             77.0  \n",
-       "4375194                2                 39.0             77.0  \n",
-       "4375195                2                 12.0             77.0  \n",
-       "4375196                2                 39.0             77.0  \n",
+       "        Code type local  Surface reelle bati  Surface terrain  \n",
+       "0                     1                 97.0           2410.0  \n",
+       "1                     3                  0.0           2410.0  \n",
+       "3                     1                 88.0            866.0  \n",
+       "4                     3                  0.0           1426.0  \n",
+       "5                     1                168.0           1426.0  \n",
+       "...                 ...                  ...              ...  \n",
+       "4375192               2                 39.0             77.0  \n",
+       "4375193               2                 39.0             77.0  \n",
+       "4375194               2                 39.0             77.0  \n",
+       "4375195               2                 12.0             77.0  \n",
+       "4375196               2                 39.0             77.0  \n",
        "\n",
        "[1427107 rows x 7 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2=df2.dropna().astype({\"Code type local\":int, 'Nature mutation':str, 'Commune':str, 'Surface reelle bati':float, 'Surface terrain':float, 'Code postal':int})\n",
+    "df2=df2.dropna().astype({\"Code type local\":int, 'Nature mutation':str, 'Commune':str, 'Surface reelle bati':float, 'Surface terrain':float, 'Code postal':int, 'Valeur fonciere':float})\n",
+    "df2=df2.astype({\"Code type local\":str, \"Code postal\":str})\n",
     "df2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "id": "886bfde1",
    "metadata": {},
    "outputs": [
@@ -857,152 +868,144 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>436054</th>\n",
+       "      <th>439053</th>\n",
        "      <td>Vente</td>\n",
-       "      <td>915000,00</td>\n",
-       "      <td>13012</td>\n",
-       "      <td>MARSEILLE 12EME</td>\n",
-       "      <td>1</td>\n",
-       "      <td>89.0</td>\n",
-       "      <td>603.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>431417</th>\n",
-       "      <td>Vente</td>\n",
-       "      <td>210000,00</td>\n",
-       "      <td>13003</td>\n",
-       "      <td>MARSEILLE 3EME</td>\n",
-       "      <td>2</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>176.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>406047</th>\n",
-       "      <td>Vente</td>\n",
-       "      <td>450000,00</td>\n",
-       "      <td>13010</td>\n",
-       "      <td>MARSEILLE 10EME</td>\n",
-       "      <td>2</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>570.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>407323</th>\n",
-       "      <td>Vente</td>\n",
-       "      <td>590000,00</td>\n",
-       "      <td>13006</td>\n",
-       "      <td>MARSEILLE 6EME</td>\n",
-       "      <td>2</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>69.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>440095</th>\n",
-       "      <td>Vente</td>\n",
-       "      <td>900000,00</td>\n",
-       "      <td>13012</td>\n",
-       "      <td>MARSEILLE 12EME</td>\n",
-       "      <td>1</td>\n",
-       "      <td>250.0</td>\n",
-       "      <td>2427.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>430903</th>\n",
-       "      <td>Vente</td>\n",
-       "      <td>934000,00</td>\n",
-       "      <td>13006</td>\n",
-       "      <td>MARSEILLE 6EME</td>\n",
-       "      <td>2</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>185.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>426680</th>\n",
-       "      <td>Vente</td>\n",
-       "      <td>567000,00</td>\n",
-       "      <td>13013</td>\n",
-       "      <td>MARSEILLE 13EME</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>711.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>403141</th>\n",
-       "      <td>Vente</td>\n",
-       "      <td>279000,00</td>\n",
-       "      <td>13004</td>\n",
-       "      <td>MARSEILLE 4EME</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>82.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>401579</th>\n",
-       "      <td>Vente</td>\n",
-       "      <td>150000,00</td>\n",
-       "      <td>13001</td>\n",
-       "      <td>MARSEILLE 1ER</td>\n",
-       "      <td>2</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>34.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>427083</th>\n",
-       "      <td>Vente</td>\n",
-       "      <td>600000,00</td>\n",
+       "      <td>302000.0</td>\n",
        "      <td>13011</td>\n",
        "      <td>MARSEILLE 11EME</td>\n",
+       "      <td>1</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>146.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>418510</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>600000.0</td>\n",
+       "      <td>13006</td>\n",
+       "      <td>MARSEILLE 6EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>120.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>438261</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>485000.0</td>\n",
+       "      <td>13011</td>\n",
+       "      <td>MARSEILLE 11EME</td>\n",
+       "      <td>1</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>616.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>415048</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>486550.0</td>\n",
+       "      <td>13008</td>\n",
+       "      <td>MARSEILLE 8EME</td>\n",
        "      <td>3</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>593.0</td>\n",
+       "      <td>147.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>424448</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>138000.0</td>\n",
+       "      <td>13013</td>\n",
+       "      <td>MARSEILLE 13EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>52.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>413054</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>720000.0</td>\n",
+       "      <td>13009</td>\n",
+       "      <td>MARSEILLE 9EME</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>573.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406810</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>525000.0</td>\n",
+       "      <td>13007</td>\n",
+       "      <td>MARSEILLE 7EME</td>\n",
+       "      <td>1</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>244.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>438094</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>520000.0</td>\n",
+       "      <td>13012</td>\n",
+       "      <td>MARSEILLE 12EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>404.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>430333</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>2190500.0</td>\n",
+       "      <td>13001</td>\n",
+       "      <td>MARSEILLE 1ER</td>\n",
+       "      <td>4</td>\n",
+       "      <td>268.0</td>\n",
+       "      <td>108.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406388</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>1800000.0</td>\n",
+       "      <td>13007</td>\n",
+       "      <td>MARSEILLE 7EME</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>154.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Nature mutation Valeur fonciere  Code postal          Commune  \\\n",
-       "436054           Vente       915000,00        13012  MARSEILLE 12EME   \n",
-       "431417           Vente       210000,00        13003   MARSEILLE 3EME   \n",
-       "406047           Vente       450000,00        13010  MARSEILLE 10EME   \n",
-       "407323           Vente       590000,00        13006   MARSEILLE 6EME   \n",
-       "440095           Vente       900000,00        13012  MARSEILLE 12EME   \n",
-       "430903           Vente       934000,00        13006   MARSEILLE 6EME   \n",
-       "426680           Vente       567000,00        13013  MARSEILLE 13EME   \n",
-       "403141           Vente       279000,00        13004   MARSEILLE 4EME   \n",
-       "401579           Vente       150000,00        13001    MARSEILLE 1ER   \n",
-       "427083           Vente       600000,00        13011  MARSEILLE 11EME   \n",
+       "       Nature mutation  Valeur fonciere Code postal          Commune  \\\n",
+       "439053           Vente         302000.0       13011  MARSEILLE 11EME   \n",
+       "418510           Vente         600000.0       13006   MARSEILLE 6EME   \n",
+       "438261           Vente         485000.0       13011  MARSEILLE 11EME   \n",
+       "415048           Vente         486550.0       13008   MARSEILLE 8EME   \n",
+       "424448           Vente         138000.0       13013  MARSEILLE 13EME   \n",
+       "413054           Vente         720000.0       13009   MARSEILLE 9EME   \n",
+       "406810           Vente         525000.0       13007   MARSEILLE 7EME   \n",
+       "438094           Vente         520000.0       13012  MARSEILLE 12EME   \n",
+       "430333           Vente        2190500.0       13001    MARSEILLE 1ER   \n",
+       "406388           Vente        1800000.0       13007   MARSEILLE 7EME   \n",
        "\n",
-       "        Code type local  Surface reelle bati  Surface terrain  \n",
-       "436054                1                 89.0            603.0  \n",
-       "431417                2                 40.0            176.0  \n",
-       "406047                2                 48.0            570.0  \n",
-       "407323                2                 36.0             69.0  \n",
-       "440095                1                250.0           2427.0  \n",
-       "430903                2                 25.0            185.0  \n",
-       "426680                3                  0.0            711.0  \n",
-       "403141                3                  0.0             82.0  \n",
-       "401579                2                 15.0             34.0  \n",
-       "427083                3                  0.0            593.0  "
+       "       Code type local  Surface reelle bati  Surface terrain  \n",
+       "439053               1                 85.0            146.0  \n",
+       "418510               2                 52.0            120.0  \n",
+       "438261               1                 96.0            616.0  \n",
+       "415048               3                  0.0            147.0  \n",
+       "424448               2                 42.0             52.0  \n",
+       "413054               3                  0.0            573.0  \n",
+       "406810               1                 80.0            244.0  \n",
+       "438094               2                 24.0            404.0  \n",
+       "430333               4                268.0            108.0  \n",
+       "406388               3                  0.0            154.0  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df3=df2[df2[\"Code postal\"].isin([13000,13001,13002,13003,13004,13005,13006,13007,13008,13009,13010,13011,13012,13013,13014,13015,13016,13017])]\n",
+    "df3=df2[df2[\"Code postal\"].isin(['13000','13001','13002','13003','13004','13005','13006','13007','13008','13009','13010','13011','13012','13013','13014','13015','13016','13017'])]\n",
     "df3.sample(10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ef96ceb-d0a6-4e6e-8473-1fa8bd68a403",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
