--- a/Data/DVF.ipynb
+++ b/Data/DVF.ipynb
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 57,
    "id": "88cf77f8-7bac-4afd-a953-8ab8bdfe4e97",
    "metadata": {},
    "outputs": [
@@ -1208,7 +1208,7 @@
        "[2745 rows x 7 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "id": "3baf1ccf-a7bb-45d9-a549-eb0aa2083d63",
    "metadata": {},
    "outputs": [],
@@ -1235,29 +1235,199 @@
     "#Dans le cas des appartements, la surface du terrain désigne la surface cadastrale du terrain, qui n'est pas vendue\n",
     "#lors de la transaction. On la remplace donc par 0.\n",
     "for i in range(df4.shape[0]):\n",
-    "    if df4.iloc[i,6]=='2':\n",
-    "        df4.iloc[i,7]=0"
+    "    if df4.iloc[i,4]=='2':\n",
+    "        df4.iloc[i,6]=0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "id": "231eebee-b2b7-4aaf-8d79-2055402341ee",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nature mutation</th>\n",
+       "      <th>Valeur fonciere</th>\n",
+       "      <th>Code postal</th>\n",
+       "      <th>Commune</th>\n",
+       "      <th>Code type local</th>\n",
+       "      <th>Surface reelle bati</th>\n",
+       "      <th>Surface terrain</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>400768</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>610000.0</td>\n",
+       "      <td>13016</td>\n",
+       "      <td>MARSEILLE 16EME</td>\n",
+       "      <td>1</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>605.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>400821</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>260000.0</td>\n",
+       "      <td>13016</td>\n",
+       "      <td>MARSEILLE 16EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>400822</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>260000.0</td>\n",
+       "      <td>13016</td>\n",
+       "      <td>MARSEILLE 16EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>400823</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>260000.0</td>\n",
+       "      <td>13016</td>\n",
+       "      <td>MARSEILLE 16EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>400824</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>260000.0</td>\n",
+       "      <td>13016</td>\n",
+       "      <td>MARSEILLE 16EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>441152</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>520000.0</td>\n",
+       "      <td>13011</td>\n",
+       "      <td>MARSEILLE 11EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>441153</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>520000.0</td>\n",
+       "      <td>13011</td>\n",
+       "      <td>MARSEILLE 11EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>441154</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>520000.0</td>\n",
+       "      <td>13011</td>\n",
+       "      <td>MARSEILLE 11EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>441155</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>520000.0</td>\n",
+       "      <td>13011</td>\n",
+       "      <td>MARSEILLE 11EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>441161</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>109000.0</td>\n",
+       "      <td>13013</td>\n",
+       "      <td>MARSEILLE 13EME</td>\n",
+       "      <td>1</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>51.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2745 rows × 7 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(2745, 7)"
+       "       Nature mutation  Valeur fonciere Code postal          Commune  \\\n",
+       "400768           Vente         610000.0       13016  MARSEILLE 16EME   \n",
+       "400821           Vente         260000.0       13016  MARSEILLE 16EME   \n",
+       "400822           Vente         260000.0       13016  MARSEILLE 16EME   \n",
+       "400823           Vente         260000.0       13016  MARSEILLE 16EME   \n",
+       "400824           Vente         260000.0       13016  MARSEILLE 16EME   \n",
+       "...                ...              ...         ...              ...   \n",
+       "441152           Vente         520000.0       13011  MARSEILLE 11EME   \n",
+       "441153           Vente         520000.0       13011  MARSEILLE 11EME   \n",
+       "441154           Vente         520000.0       13011  MARSEILLE 11EME   \n",
+       "441155           Vente         520000.0       13011  MARSEILLE 11EME   \n",
+       "441161           Vente         109000.0       13013  MARSEILLE 13EME   \n",
+       "\n",
+       "       Code type local  Surface reelle bati  Surface terrain  \n",
+       "400768               1                118.0            605.0  \n",
+       "400821               2                 45.0              0.0  \n",
+       "400822               2                 52.0              0.0  \n",
+       "400823               2                 15.0              0.0  \n",
+       "400824               2                 60.0              0.0  \n",
+       "...                ...                  ...              ...  \n",
+       "441152               2                 45.0              0.0  \n",
+       "441153               2                 37.0              0.0  \n",
+       "441154               2                100.0              0.0  \n",
+       "441155               2                 80.0              0.0  \n",
+       "441161               1                 45.0             51.0  \n",
+       "\n",
+       "[2745 rows x 7 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df4.shape"
+    "df4"
    ]
   },
   {
