--- a/Data/DVF.ipynb
+++ b/Data/DVF.ipynb
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "id": "88cf77f8-7bac-4afd-a953-8ab8bdfe4e97",
    "metadata": {},
    "outputs": [
@@ -1175,7 +1175,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2745 rows × 7 columns</p>\n",
+       "<p>2490 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1205,10 +1205,10 @@
        "441155               2                 80.0            828.0  \n",
        "441161               1                 45.0             51.0  \n",
        "\n",
-       "[2745 rows x 7 columns]"
+       "[2490 rows x 7 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,6 +1216,9 @@
    "source": [
     "#On garde uniquement les données concernant les ventes\n",
     "df4=df3[df3[\"Nature mutation\"]==\"Vente\"]\n",
+    "\n",
+    "#On garde uniquement les données concernant des viens de valeur inférieure ou égale à 2 000 000€\n",
+    "df4=df4[df4[\"Valeur fonciere\"]<=2000000]\n",
     "\n",
     "#On garde uniquement les données concernant les maisons (1) et les appartements (2)\n",
     "df4=df4[df4[\"Code type local\"].isin([\"1\",\"2\"])]\n",
@@ -1227,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "id": "3baf1ccf-a7bb-45d9-a549-eb0aa2083d63",
    "metadata": {},
    "outputs": [],
@@ -1241,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 62,
    "id": "231eebee-b2b7-4aaf-8d79-2055402341ee",
    "metadata": {},
    "outputs": [
@@ -1388,7 +1391,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2745 rows × 7 columns</p>\n",
+       "<p>2490 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1418,10 +1421,10 @@
        "441155               2                 80.0              0.0  \n",
        "441161               1                 45.0             51.0  \n",
        "\n",
-       "[2745 rows x 7 columns]"
+       "[2490 rows x 7 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
