--- a/prediction_regression.ipynb
+++ b/prediction_regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEmtUh7/k6p3xt9rLO2874",
+      "authorship_tag": "ABX9TyMOrUAZjxoj00ktYvEhcrCx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [],
+      "metadata": {
+        "id": "Q-rvtQ4hrYXS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "mIL8xTQ2eK5Z"
       },
@@ -46,7 +55,7 @@
       "metadata": {
         "id": "RemlSxRovLR7"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,7 +72,7 @@
         "id": "1LFfXxwreWpM",
         "outputId": "a79856f8-fcc0-4fed-e101-398abf57ae2b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1180,7 +1189,7 @@
         "id": "mgAlUTmBeaSt",
         "outputId": "d6a7bae1-9d18-4d0d-e0e6-c5e4fac4d74a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1542,7 +1551,7 @@
           "height": 537
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1898,7 +1907,7 @@
       "metadata": {
         "id": "_AaH653xefMg"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1914,7 +1923,7 @@
         "id": "N1asxfw3pj6F",
         "outputId": "faeb1277-99dc-4215-ca38-11ec659620e9"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2228,7 +2237,7 @@
         "id": "XAuIdZiHymne",
         "outputId": "1e5e5f1f-4d45-4606-cb47-f5e5cfe3b76e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2256,7 +2265,7 @@
       "metadata": {
         "id": "i8UwZiLl2zvq"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2271,7 +2280,7 @@
       "metadata": {
         "id": "bjzN1duA7fmN"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2298,7 +2307,7 @@
       "metadata": {
         "id": "GuSS58K2r4ZQ"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2332,7 +2341,7 @@
       "metadata": {
         "id": "GSHd6mXB5R2x"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2351,7 +2360,7 @@
         "id": "ZxcJpRNQ4-fm",
         "outputId": "a5364e43-23f0-4c88-8289-4d062834e942"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2391,7 +2400,7 @@
         "id": "7iuNfiWF5Btp",
         "outputId": "33ec80c8-cc55-4b72-a427-8adc1526fd6a"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2445,7 +2454,7 @@
           "height": 342
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2469,6 +2478,57 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "SVM Model"
+      ],
+      "metadata": {
+        "id": "bGl6abPHreVa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "from sklearn.svm import SVR\n",
+        "\n",
+        "# Split the data \n",
+        "X_train, X_test, y_train, y_test = train_test_split(X_scaled, target, test_size=0.2, random_state=42)\n",
+        "\n",
+        "# Create the SVM model\n",
+        "model = SVR(kernel='rbf', C=1.0, ep0silon=0.1)\n",
+        "\n",
+        "# Fit the model to the training data\n",
+        "model.fit(X_train, y_train)\n",
+        "\n",
+        "# Make predictions on the test set  \n",
+        "y_pred = model.predict(X_test)\n",
+        " \n",
+        "# Evaluate the model's performance\n",
+        "mae = mean_absolute_error(y_test, y_pred)\n",
+        "mse = mean_squared_error(y_test, y_pred)\n",
+        "r2 = r2_score(y_test, y_pred)\n",
+        "\n",
+        "print(f\"Mean Absolute Error: {mae:.2f}\")\n",
+        "print(f\"Mean Squared Error: {mse:.2f}\")\n",
+        "print(f\"R2 Score: {r2:.2f}\")"
+      ],
+      "metadata": {
+        "id": "4wYw4jGNraEJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Q7N-q6K5rjxd"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
